--- a/components/Collapsible/styles.module.scss
+++ b/components/Collapsible/styles.module.scss
@@ -1,19 +1,22 @@
 $bp: 600px;
 
 .collapsible {
-  width: 100%;
+  // width: 100%;
   border-bottom: 1px solid var(--light-5);
   margin: 0 auto;
+  transform: translate3d(0, 0, 0);
   max-width: 60rem;
 }
 
 .header {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
   padding: 1.25rem 0.5rem;
   opacity: 1;
+  transform: translate3d(0, 0, 0);
   transition: opacity 0.2s;
 
   @media (hover: hover) {
@@ -27,11 +30,13 @@ $bp: 600px;
   }
 
   .title {
+    display: block;
     pointer-events: none;
+    width: 100%;
     font-weight: 600;
     font-size: 1.275rem;
     line-height: 1.3;
-    padding-right: 2rem;
+    margin-right: 2rem;
 
     @media (max-width: $bp) {
       font-size: 1rem;
@@ -42,10 +47,10 @@ $bp: 600px;
     pointer-events: none;
     position: relative;
     display: flex;
-    width: 1rem;
-    height: 1rem;
     align-items: center;
     justify-content: center;
+    width: 1rem;
+    height: 1rem;
 
     @media (max-width: $bp) {
       width: 0.7rem;
