footer padding fix

--- a/components/Collapsible/styles.module.scss
+++ b/components/Collapsible/styles.module.scss
@@ -1,10 +1,9 @@
 $bp: 600px;
 
 .collapsible {
-  // width: 100%;
+  width: 100%;
   border-bottom: 1px solid var(--light-5);
   margin: 0 auto;
-  transform: translate3d(0, 0, 0);
   max-width: 60rem;
 }
 
@@ -16,7 +15,6 @@ $bp: 600px;
   cursor: pointer;
   padding: 1.25rem 0.5rem;
   opacity: 1;
-  transform: translate3d(0, 0, 0);
   transition: opacity 0.2s;
 
   @media (hover: hover) {
