--- a/blocks/TextWithDescription/styles.module.scss
+++ b/blocks/TextWithDescription/styles.module.scss
@@ -44,6 +44,7 @@ $bp-1: 1023px;
     }
 
     .buttons {
+      $button-bp: 500px;
       list-style: none;
       display: flex;
       margin-top: 2rem;
@@ -53,8 +54,17 @@ $bp-1: 1023px;
       }
 
       .button {
+        display: inline-grid;
         &:not(:last-child) {
           margin-right: 1.25rem;
+        }
+
+        a,
+        button {
+          display: inline-grid;
+          @media (max-width: $button-bp) {
+            width: 90%;
+          }
         }
       }
     }
