--- a/blocks/FeatureSlider/styles.module.scss
+++ b/blocks/FeatureSlider/styles.module.scss
@@ -194,10 +194,10 @@
 [data-section-theme="main"],
 [data-section-theme="dark"] {
   .slide {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: var(--dark-5);
+    background-color: rgba(0, 0, 0, 0.25);
+    color: var(--light-5);
     &.active {
-      color: #000;
+      color: #fff;
     }
   }
 }
@@ -210,7 +210,7 @@
   }
   [data-section-theme] {
     .slide {
-      background-color: var(--light-4);
+      background-color: rgba(0, 0, 0, 0.5);
       color: var(--dark-6);
       &.active {
         color: var(--dark);
