updated dpa generator

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -8,6 +8,7 @@ body {
   background-color: var(--background-color);
   color: var(--dark);
   font-size: 100%;
+  scroll-padding-top: var(--header-height);
 }
 
 body {
