--- a/forms/DPA/styles.module.scss
+++ b/forms/DPA/styles.module.scss
@@ -24,10 +24,17 @@
     margin-bottom: 0;
     padding-bottom: 0;
   }
-
   & > div {
     @media (max-width: 600px) {
       grid-template-columns: 1fr;
+    }
+  }
+
+  form {
+    & > div {
+      @media (max-width: 600px) {
+        grid-template-columns: 1fr;
+      }
     }
   }
 
@@ -119,5 +126,64 @@
     .prefix {
       background-color: var(--light-3);
     }
+  }
+}
+
+.signature {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 50% !important;
+  overflow: hidden;
+  border-radius: var(--border-radius-medium);
+  border: 1px solid var(--light-5);
+
+  canvas {
+    max-width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    filter: brightness(0.975);
+  }
+}
+
+.signatureLine {
+  pointer-events: none;
+  height: 1px;
+  background-color: #000;
+  opacity: 0.175;
+  position: absolute;
+  bottom: 30%;
+  width: 80%;
+}
+
+.signatureClear {
+  pointer-events: auto;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: var(--border-radius-small);
+  border: 1px solid var(--light-5);
+  background-color: #fff;
+
+  svg {
+    width: 50%;
+    opacity: 0.5;
+  }
+}
+
+[data-theme="dark"] {
+  .signature {
+    filter: invert(1);
+    box-shadow: none;
+    border: 1px solid var(--dark-5);
   }
 }
