--- a/blocks/Section/styles.module.scss
+++ b/blocks/Section/styles.module.scss
@@ -1,4 +1,4 @@
-@import "/assets/styles/colors";
+@use "/assets/styles/colors" as c;
 
 $skew-angle: 5deg;
 
@@ -85,14 +85,14 @@ html:not([data-theme="dark"]) .main {
     --dark: #fff;
     --badge-color: #fff;
     color: var(--dark);
-    --main-color: #{$main-color-light-3};
-    --main-color-light: #{$main-color-light-2};
-    --main-color-light-2: #{$main-color-light-4};
-    --main-color-light-3: #{$main-color-light-5};
-    --main-color-light-4: #{$main-color-light-7};
-    --main-color-light-5: #{$main-color};
-    --main-color-light-7: #{$main-color-dark};
-    --main-color-light-8: #{$main-color-light-3};
+    --main-color: #{c.$main-color-light-3};
+    --main-color-light: #{c.$main-color-light-2};
+    --main-color-light-2: #{c.$main-color-light-4};
+    --main-color-light-3: #{c.$main-color-light-5};
+    --main-color-light-4: #{c.$main-color-light-7};
+    --main-color-light-5: #{c.$main-color};
+    --main-color-light-7: #{c.$main-color-dark};
+    --main-color-light-8: #{c.$main-color-light-3};
   }
 }
 
@@ -115,8 +115,8 @@ html:not([data-theme="dark"]) .light {
     }
   }
   .content {
-    --main-color-light-9: #{$main-color-light-8};
-    --main-color-light-8: #{$main-color-light-7};
+    --main-color-light-9: #{c.$main-color-light-8};
+    --main-color-light-8: #{c.$main-color-light-7};
   }
 }
 
@@ -129,7 +129,7 @@ html:not([data-theme="dark"]) .light {
     }
   }
   .content {
-    --main-color-light-9: #{$main-color-light-7};
+    --main-color-light-9: #{c.$main-color-light-7};
   }
 }
 
@@ -143,14 +143,14 @@ html:not([data-theme="dark"]) .dark {
   }
   .content {
     --dark: #fff;
-    --main-color: #{$main-color-dark-3};
-    --main-color-light: #{$main-color-dark};
-    --main-color-light-2: #{$main-color-dark-2};
-    --main-color-light-3: #{$main-color-dark};
-    --main-color-light-4: #{$main-color};
-    --main-color-light-5: #{$main-color-light-2};
-    --main-color-light-7: #{$main-color-light-3};
-    --main-color-light-8: #{$main-color-dark-3};
+    --main-color: #{c.$main-color-dark-3};
+    --main-color-light: #{c.$main-color-dark};
+    --main-color-light-2: #{c.$main-color-dark-2};
+    --main-color-light-3: #{c.$main-color-dark};
+    --main-color-light-4: #{c.$main-color};
+    --main-color-light-5: #{c.$main-color-light-2};
+    --main-color-light-7: #{c.$main-color-light-3};
+    --main-color-light-8: #{c.$main-color-dark-3};
     --badge-color: #fff;
     color: var(--dark);
   }
