updated feedback page, added Check block, added Testimonial block, added Slider block, added PricingTable slider block, updated several blocks

--- a/blocks/Section/styles.module.scss
+++ b/blocks/Section/styles.module.scss
@@ -159,15 +159,27 @@ html:not([data-theme="dark"]) .dark {
 [data-theme="dark"] .dark {
   background-color: var(--light-3);
   &.isSkewed {
+    background-color: transparent;
     .skew {
       background-color: var(--light-3);
     }
   }
 }
 
-.grey {
+html:not([data-theme="dark"]) .grey {
   background-color: var(--light-2);
   &.isSkewed {
+    background-color: transparent;
+    .skew {
+      background-color: var(--light-2);
+    }
+  }
+}
+
+[data-theme="dark"] .grey {
+  background-color: var(--light-2);
+  &.isSkewed {
+    background-color: transparent;
     .skew {
       background-color: var(--light-2);
     }
