added newsletter signup, updated technology partner site, design fixes

--- a/components/Footer/Newsletter/styles.module.scss
+++ b/components/Footer/Newsletter/styles.module.scss
@@ -32,3 +32,10 @@ $bp: 900px;
     grid-template-columns: 1fr;
   }
 }
+
+.messages {
+  grid-column-start: 2;
+  @media (max-width: $bp) {
+    grid-column-start: 1;
+  }
+}
