--- a/blocks/TextWithImage/styles.module.scss
+++ b/blocks/TextWithImage/styles.module.scss
@@ -124,6 +124,7 @@ $horizontal-padding: 3rem;
       object-fit: contain;
       object-position: center;
       box-shadow: var(--shadow-medium);
+      border-radius: var(--border-radius-medium);
 
       @media (max-width: $bp-1) {
         width: 93%;
@@ -182,7 +183,7 @@ $horizontal-padding: 3rem;
             width: 100%;
             height: 100%;
             display: block;
-            background-color: var(--main-color-light-6);
+            background-color: var(--main-color-light-5);
             border-radius: var(--border-radius-round);
           }
 
@@ -274,6 +275,10 @@ $horizontal-padding: 3rem;
 
     .description {
       max-width: 50rem;
+    }
+
+    .buttons {
+      justify-content: center;
     }
   }
 }
