updated newsletter signup

--- a/components/Button/styles.module.scss
+++ b/components/Button/styles.module.scss
@@ -117,7 +117,7 @@
   }
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   .tertiary {
     color: var(--main-color-light);
     border-color: rgba(255, 255, 255, 0.035);
