--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -32,7 +32,7 @@ $bp-menu-tablet: 1150px;
   }
 }
 
-[data-layout="docs"] {
+[data-layout='docs'] {
   .outerContainer {
     border-bottom-color: var(--light-5);
   }
@@ -118,14 +118,10 @@ $bp-menu-tablet: 1150px;
 
     img {
       max-width: 100%;
-      height: 2.35rem;
+      height: 2rem;
       object-fit: contain;
     }
   }
-}
-
-[data-theme="dark"] .logo {
-  filter: invert(1) saturate(0) brightness(99);
 }
 
 .buttons {
