[hotfix] infinite slider color modes

--- a/blocks/InfiniteSlider/styles.module.scss
+++ b/blocks/InfiniteSlider/styles.module.scss
@@ -135,7 +135,7 @@ $bp: 767px;
 
 [data-section-theme='main'],
 [data-section-theme='dark'] {
-  .logos {
+  .slider {
     a {
       img {
         opacity: 0.75;
@@ -149,7 +149,7 @@ $bp: 767px;
 }
 
 [data-theme='dark'] {
-  .logos {
+  .slider {
     a {
       img {
         opacity: 0.55;
