added swagger endpoints, updated feedback pricing, some (design) fixes

--- a/blocks/InfiniteSlider/styles.module.scss
+++ b/blocks/InfiniteSlider/styles.module.scss
@@ -65,7 +65,7 @@ $bp: 767px;
     }
 
     &:hover {
-      animation-play-state: paused;
+      animation-play-state: paused !important;
     }
 
     li {
